--- a/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/MainWindow.xaml
@@ -13,10 +13,15 @@
             <local:RangeSlider x:Name="RangeSlider"
                                Height="30"
                                Margin="30,0"
-                               LowerValue="-30"
+                               Delay="0"
+                               Interval="1"
+                               IsMoveToPoint="False"
+                               IsSnapToStep="True"
+                               LowerValue="-95"
                                Maximum="100"
                                Minimum="-100"
-                               UpperValue="60" />
+                               Step="1"
+                               UpperValue="93.78" />
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
@@ -29,6 +34,15 @@
                            HorizontalAlignment="Center"
                            Text="{Binding ElementName=RangeSlider, Path=UpperValue}" />
             </Grid>
+            <Slider x:Name="Slider"
+                    Delay="0"
+                    Interval="1"
+                    IsMoveToPointEnabled="False"
+                    IsSnapToTickEnabled="False"
+                    LargeChange="0.1"
+                    SmallChange="0.1"
+                    TickFrequency="0.1" />
+            <TextBlock Text="{Binding ElementName=Slider, Path=Value}" />
         </StackPanel>
     </Grid>
 </Window>
